--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,26 @@
 name: bongga_flutter_map
 description: A new Flutter package to display a custom flutter_map
+publish_to: 'none'
 version: 0.0.5
 author: Bongga
 homepage: https://bongga.co
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
+  # flutter_map: 
+  #   git:
+  #     url: https://github.com/bongga-co/flutter_map.git
   flutter_map: 
-    git:
-      url: https://github.com/bongga-co/flutter_map.git
+    path: ../flutter_map
+      
 
-  rxdart: 0.22.2
-  geolocator: 5.1.3
+  rxdart: ^0.23.1
+  geolocator: ^5.1.3
 
 dev_dependencies:
   flutter_test:
