--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,18 +6,20 @@ author: Bongga
 homepage: https://bongga.co
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  rxdart: ^0.25.0
-  geolocator: ^5.1.3
-  flutter_map:
-    git:
-      url: https://github.com/bongga-co/flutter_map.git
+  rxdart: ^0.27.1
+  geolocator: ^7.2.0+1
+  flutter_map: ^0.13.1
+#  flutter_map:
+#    git:
+#      url: https://github.com/bongga-co/flutter_map.git
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^2.1.2
