Add rule in analysis_options.yaml file

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,5 +4,6 @@ linter:
   rules:
     avoid_dynamic_calls: false
     avoid_print: false
+    library_private_types_in_public_api: false
     public_member_api_docs: false
     prefer_void_to_null: false
